--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@ footer {
     width: 100%;
 }
 .container__body--about-me {
-    width: 100%;
     text-align: justify;
 }
 .container__body--about-me h3 {
@@ -121,4 +120,53 @@ footer .footer__main{
     display: flex;
     justify-content: right;
     align-items: center;
+}
+/* Card contact */
+.container__header--right-side {
+    width: 300px;
+    height: 400px;
+    background: #242628;
+    border-radius: 10px;
+    text-align: center;
+    overflow: hidden;
+    margin: 0 auto;
+}
+.container__header--right-side .contact__card {
+}
+.contact__card .card__img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 4px solid var(--fourth-color);
+    overflow: hidden;
+    margin: 30px auto;
+}
+.contact__card .card__img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-position: center;
+}
+.contact__card .card__title h2 {
+    margin-top: 35px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: white;
+}
+.contact__card .card__name p {
+    color: var(--fourth-color);
+}
+.card__sm {
+    margin: 25px 0;
+    font-size: 20px;
+}
+
+.card__sm a {
+    color: white;
+    text-decoration: none;
+    margin: 25px 20px;
+}
+.card__sm a :hover {
+    transition: 0.25s;
+    color: var(--primary-color);
 }
